--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,11 @@
 name = "cccccccclick"
 compatibility_date = "2025-09-15"
-main = "src/server.ts"
-workers_dev = false
+main = "src/server/main.mts"
+workers_dev = true
 
 [assets]
-directory = "./public"
-binding = "ASSETS"
+not_found_handling = "single-page-application"
+run_worker_first = ["/api/*"]
 
 [[durable_objects.bindings]]
 name = "COUNTER"
