--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     },
     "scripts": {
         "cf-typegen": "wrangler types ./src/server/worker-configuration.d.ts",
-        "predeploy": "tsc --noEmit && wrangler deploy --dry-run",
-        "deploy": "npm run cf-typegen && npm run build && wrangler deploy",
+        "predeploy": "npm run cf-typegen && tsc --noEmit && npm run build && wrangler deploy --dry-run",
+        "deploy": "wrangler deploy",
         "build": "vite build",
         "dev": "vite dev"
     },
